# Final-Project

./: .gitignore  BSMModel.cpp  BSMModel.h  CMakeLists.txt  README.md  check_asymptotic_result.cpp  check_reduction.cpp  controlVariates.cpp  controlVariates.h  main.cpp  n100.eps  n50.eps  samplePlot.m~  sample_size_10.csv  sample_size_100.csv  sample_size_1000.csv  sample_size_50.csv  statistic_tool.cpp  statistic_tool.h  varianceReduction.cpp  varianceReduction.h
output/: hist_strike40.eps  hist_strike55.eps  hist_strike70.eps  linear_regression.m  n10.eps  n1000.eps  prob_distribution.m  samplePlot.m  samplePlot.m~  sample_size_10.csv  sample_size_100.csv  sample_size_1000.csv  sample_size_50.csv  strike40.eps  strike50.eps  strike60.eps  strike70.eps  strike_coeff.m
src/: BSMModel.cpp  Payoff.h  analysis.cpp  controlVariates.cpp  controlVariates.h  statistic_tool.cpp  statistic_tool.h
